--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   ],
   "author": "midcenturydude7",
   "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
     "vite": "^6.3.6"
   }
